@@ -302,9 +302,12 @@ BUG FIXES
     o	The coding standards recommendations had nuke-trailing-whitespace where
 	newer versions of ESS need ess-nuke-trailing-whitespace.  (PR#7888)
 
-    o	package.sceleton() missed the first newline in the DESCRIPTION file.
+    o	package.skeleton() missed the first newline in the DESCRIPTION file.
 
-    o   pbirthday reported p=1 too often when coincident>2
+    o   pbirthday() reported p=1 too often when coincident>2
+
+    o	plot(1:3, exp(1:3), log = "y", ylim = c(30,1)) {reversed log-scale axis}
+	now works, based on Uwe Ligges' suggestions.  (PR#7894)
 
 
 
